--- a/app/views/skm/entry_headers/index.html.erb
+++ b/app/views/skm/entry_headers/index.html.erb
@@ -1,2 +1,2 @@
-<%= common_title(:model_meaning=>t(:label_skm),:buttons => render(:partial => "new_as_button")) %>
+<%= common_title(:model_meaning=>t(:label_skm)) %>
 <%= render "data_grid" %>
