--- a/app/views/helper/_upload_file_template.html.erb
+++ b/app/views/helper/_upload_file_template.html.erb
@@ -1,12 +1,12 @@
 <% type_flag ||= false %>
 <!--页面结构-->
-<div class="page-block">
-  <table class="page-block-header"><tr>
-    <td class="page-block-title">
-      <h2 class="block-title"><%= t(:label_attachment_info) %></h2>
-    </td>
-  </tr></table>
-  <div class="page-block-body">
+<div class="sub-page-block">
+  <div class="sub-page-block-header">
+    <div class="sub-page-block-header">
+      <h3 class="sub-page-block-title"><%= t(:label_attachment_info) %></h3>
+    </div>
+  </div>
+  <div class="sub-page-block-body">
     <table cellpadding="0" cellspacing="0" border="0">
       <thead>
         <tr>
