--- a/app/views/skm/entry_headers/_new_as_button.html.erb
+++ b/app/views/skm/entry_headers/_new_as_button.html.erb
@@ -1,16 +1,10 @@
-  <div class="as-button" >
-      <span id="newSkmEntry" class="menuButton">
-        <div  class="menuLabel">
-          <span><a><%= t(:button_skm_entry_header_new)  %></a></span>
-        </div>
-        <div class="menuContent">
-          <div class="menuItem"><%= link_to(t(:label_skm_entry_create_article),{:action => "new"},:class=>"submit") %></div>
-          <div class="menuItem"><%= link_to(t(:label_skm_entry_create_video),{:action => "new_step_video_upload"}) %></div>
-        </div>
-      </span>
-      <script type="text/javascript">
-        $(document).ready(function(){
-            $("#newSkmEntry").menubutton();
-        });
-      </script>
-  </div>
+<div class="btn-group" style="float: left;display: inline-block;">
+  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+    <%= t(:button_skm_entry_header_new)  %>
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu">
+    <li><%= link_to(t(:label_skm_entry_create_article),{:action => "new"}) %></li>
+    <li><%= link_to(t(:label_skm_entry_create_video),{:action => "new_step_video_upload"}) %></li>
+  </ul>
+</div>
