--- a/app/views/skm/entry_headers/new_step_1.html.erb
+++ b/app/views/skm/entry_headers/new_step_1.html.erb
@@ -1,82 +1,74 @@
 <%= app_title({:description => t(:new)}) %>
-<%= form_for(@entry_header,:url=>{:action=>"new", :step => "2"},:builder => LabellingFormBuilder) do |f| %>
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
+<%= form_for(@entry_header,:url=>{:action=>"new", :step => "2"},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="split-table" cellpadding="0" cellspacing="0">
+       <tr>
+         <td class="side-bar">
+           <%= f.select :entry_template_id, available_entry_templates.collect{|p| [p.name, p.id]}, {},{:style => "width: 100%;min-height: 290px; min-width: 180px;", :id => "template_select", :size => "18" , :selected => (@entry_header.entry_template_id ? @entry_header.entry_template_id : false)} %>
+         </td>
+         <td class="side-content">
+           <div id="entry_elements_list"></div>
+           <%= datatable("entry_elements_list",{:controller => "skm/entry_templates", :action=>"get_owned_elements_data", :template_id => @entry_header.entry_template_id ? @entry_header.entry_template_id : "-1" ,:format=>"json"},[]) %>
+         </td>
+       </tr>
+    </table>
+
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:next), {:class => "btn btn-primary"} %>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:step_n, :n => "1") %><%= t(:notice_skm_entry_header_choice_template) %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
+          </td>
+          <td class="page-block-help">
             <%= t(:step_n_total_m, :n => "1", :m => "4") %>
+
+          </td>
+        </tr>
+    </table>
+    <%= error_for @entry_header %>
+    <p class="help-block" style="padding: 10px;"><%= t(:notice_skm_entry_step_1_desc) %></p>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 个人信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
         </div>
-        <h2>
-            <%= t(:step_n, :n => "1") %><%= t(:notice_skm_entry_header_choice_template) %>
-        </h2>
-    </div>
-  <div class="pbBody">
-    <div class="pbDescription ">
-    <%= t(:notice_skm_entry_step_1_desc) %>
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <span class="pbSubExtra">
-                <span class="requiredLegend">
-                  <span class="requiredExampleOuter">
-                    <span class="requiredExample">&nbsp;</span>
-                  </span><span class="requiredMark">*</span>
-                  <span class="requiredText"> = <%=t(:label_is_required)%></span>
-                </span>
-              </span>
-              <h3><%= t(:label_common_info) %></h3>
-            </div>
-            <div class="pbSubsection">
-              <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                <tbody>
-                    <tr>
-                      <td class="labelCol">
-                        <%= f.select :entry_template_id, available_entry_templates.collect{|p| [p.name, p.id]}, {},{:style => "width: 100%;min-height: 290px; min-width: 180px;", :id => "template_select", :size => "18" , :selected => (@entry_header.entry_template_id ? @entry_header.entry_template_id : false)} %>
-                      </td>
-                      <td class="data2Col">
-                        <div id="entry_elements_list" class="datatable" style="width:100%;">
-                          <div id="required_flag" style="display:none">
-                            <%= check_img("{required_flag}") %>
-                          </div>
-                        </div>
-                        <%= datatable("entry_elements_list",{:controller => "skm/entry_templates", :action=>"get_owned_elements_data", :template_id => @entry_header.entry_template_id ? @entry_header.entry_template_id : "-1" ,:format=>"json"},
-                                      [{:key=>"required_flag",:label=>t(:label_skm_entry_template_element_required), :width => "40px",:formatter=>"Y.irm.template"},
-                                       {:key=>"entry_template_element_code",:label=>t(:label_skm_entry_template_element_code), :width => "200px"},
-                                       {:key=>"name",:label=>t(:name), :width => "200px"},
-                                       {:key=>"description",:label=>t(:description)},
-                                       {:key=>"default_rows",:label=>t(:label_skm_entry_template_element_rows), :width => "80px"}
-                                       ]) %>
-                      </td>
-                    </tr>
-                </tbody>
-              </table>
-            </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
         </div>
-      </div>      
+      </div>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:action => "index"} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
+
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
   </div>
-</div>
+<% end %>
+
 <script type="text/javascript">
   $(function(){
       $("select#template_select").change(function(e){
-          Ext.getCmp("entry_elements_listDatatable").store.dtSearch({template_id_t:$(this).val()});
+          var params = {};
+          params['template_id_t'] = $(this).val();
+          var current_target = $("#entry_elements_list").data("datatable").target;
+          current_target.data.options.searchOptions = params;
+          current_target.loadPage(1);
       });
   });
 </script>
-<% end %>
