--- a/modules/bootstrap/app/assets/stylesheets/plugins/treeview.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/plugins/treeview.css.less
@@ -64,13 +64,11 @@
 .treeview .actions .add-child a {font-weight: bold;color: #666;}
 
 #tree-div {
-    width: 200px;
+    min-width: 200px;
     height: 300px;
     background:white;
     overflow: auto;
-    border-color:#99bce8;
-    border-style:solid;
-    border-width:1px;
+    border: 1px solid #CBCBCB;
     text-align: left;
 }
 
