--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -46,6 +46,7 @@ input, textarea, select, .uneditable-input {
     width: 120px;
 }
 
+
 // layout=========
 @bodyBackgroundPath: asset-path('framework/gradient_body.png');
 
@@ -1136,7 +1137,7 @@ div.min-block-body{
     text-align: center;
     vertical-align: middle;
     position: relative;
-    height: 20px;
+    height: 24px;
 }
 
 .paginator a {
@@ -1151,6 +1152,7 @@ div.min-block-body{
     left: 0;
     position: absolute;
     text-align: left;
+    padding: 2px 5px;
 }
 
 .paginator .paginator-button {
@@ -1276,6 +1278,12 @@ div.min-block-body{
     width: 80px;
 }
 
+// form=========
+.lov-btn{
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
 //========form layout======
 table.form-table {
     width: 800px;
@@ -1284,7 +1292,8 @@ table.form-table {
 table.form-table label {
     font-size: 91%;
     font-weight: bold;
-    margin-top: 5px;
+    margin-top: 3px;
+    margin-bottom: 3px;
     display: inline-block;
 }
 
