--- a/modules/bootstrap/app/assets/stylesheets/bootstrap/bootstrap_and_overrides.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/bootstrap/bootstrap_and_overrides.css.less
@@ -29,4 +29,32 @@
 .tabbable ul {
     padding-left: 20px;
 }
+// 修改输入字段,按钮高度
+select, input[type="file"] {
+    height: 24px;
+    line-height: 24px;
+}
 
+
+
+input, textarea, select, .uneditable-input {
+    font-size: 11px;
+    padding: 2px 4px;
+
+}
+
+.btn {
+    font-size: 11px;
+    padding: 2px 10px;
+
+}
+
+.input-prepend .add-on, .input-append .add-on {
+
+    padding: 2px 5px;
+
+}
+
+.input-prepend, .input-append {
+    margin-bottom: 0px;
+}
